<!-- Author: 181511049 Ivan Eka Putra -->
<resources>
    <string name="app_name">ZOMATO</string>
    <string name="restaurant">Restaurant Image</string>
    <string name="restaurant_name">Le Travin Grill</string>
    <string name="cost_for_one">230 per person</string>
    <string name="currency">$</string>
    <string name="aggregate_rating">4.7</string>
    <string name="has_online_dellivery">HAS ONLINE DELIVERY</string>
    <string name="reviews_icon">Reviews Icon</string>
    <string name="reviews">Reviews</string>
    <string name="n_reviews">60</string>
    <string name="n_reviews_label">REVIEWS</string>
    <string name="review_time_friendly">4 months ago</string>
    <string name="review_text">Mau bekel</string>
    <string name="user_name">Dika</string>
    <string name="onlineOrderingAvailable">ONLINE ORDERING AVAILABLE</string>
    <string name="noOnlineOrderingAvailable">NO ONLINE ORDERING AVAILABLE</string>
</resources>